# bmstu_AA

./: README.md
lab_01_qt/: CMakeLists.txt  main.cpp
lab_01_qt/docs/: 0_title.tex  2_analytical.tex  3_design.tex  4_technological.tex  5_research.tex  6_conclusion.tex  G7-32.sty  report.bib  report.tex
lab_01_qt/docs/data/: Damerau  Damerau.drawio
lab_01_qt/inc/: GetCPUTime.h  Levenshtein.h  Matrix.h  QtGraphic.h  TestTimeGetter.h  TimeTablePrinter.h
lab_01_qt/src/: Levenshtein.cpp  Matrix.cpp  QtGraphic.cpp
lab_02/doc/: 0_title.tex  1_introduction.tex  2_analytical.tex  3_design.tex  4_technological.tex  5_research.tex  6_conclusion.tex  7_biblio.tex  G2-105.sty  gost780u.bst  listings.inc.tex  preambule.inc.tex  report.aux  report.bbl  report.bib  report.blg  report.tex  report.toc
lab_02/src/: dotMatr.py  main.py
lab_04/: CMakeLists.txt
lab_04/data/: matrix1.txt
lab_04/docs/: 0_title.tex  1_introduction.tex  2_analytical.tex  3_design.tex  4_technological.tex  5_research.tex  6_conclusion.tex  7_biblio.tex  G7-32.sty  report.bib  report.tex
lab_04/src/: geometric_mean.cpp  geometric_mean.h  main.cpp  thread_structs.h  threads.cpp  threads.h
